# drf-stripe-subscription

./: make_package_migrations.py  pyproject.toml  setup.py
drf_stripe/: admin.py  apps.py  models.py  serializers.py  settings.py  signals.py  urls.py  views.py
drf_stripe/management/commands/: pull_stripe.py  update_stripe_customers.py  update_stripe_invoices.py  update_stripe_subscriptions.py
drf_stripe/migrations/: 0001_initial.py  0002_alter_feature_description_alter_price_freq_and_more.py  0003_price_currency.py  0004_invoice.py
drf_stripe/stripe_api/: checkout.py  customer_portal.py  customers.py  invoices.py  products.py  subscriptions.py
drf_stripe/stripe_models/: customer.py  event.py  invoice.py  price.py  product.py  subscription.py
drf_stripe/stripe_webhooks/: customer_subscription.py  handler.py  invoice.py  price.py  product.py
tests/: base.py  settings.py  urls.py
tests/api/: test_update_customers.py  test_update_products_prices.py  test_update_subscriptions.py
tests/webhook/: test_event_product_price.py  test_subscription.py
